Prometheus_stack/grafana_httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
    - name: gw-internal
      namespace: gateway
      sectionName: web-gw
  hostnames:
    - grafana.huntrrose.local
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
      - name: prometheus-stack-grafana
        namespace: monitoring
        port: 80
